<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_settings">Settings</string>
    <string name="app_lang">en</string>
    <string name="input_port_alm">IO Input Alarm</string>
    <string name="str_ActionShare">Share......</string>
    <string name="str_Add">Add</string>
    <string name="str_AddCamMnu">Manually add a camera</string>
    <string name="str_AddCamOnline">Add new online Device</string>
    <string name="str_AddNewCamSel">Add New Device</string>
    <string name="str_Alarm">Alarm</string>
    <string name="str_AlarmRecords">Alarm records</string>
    <string name="str_AllCam">[All Device]</string>
    <string name="str_Alm433M">Wireless Sensor Alarm</string>
    <string name="str_AlmIO">IO input alarm</string>
    <string name="str_AlmIRSchTime">Please set the IR-LED switch time</string>
    <string name="str_AlmMoveDet">Motion detection alarm</string>
    <string name="str_AlmPIR">PIR Sensor Alarm</string>
    <string name="str_AlmSch">Alarm Schedule</string>
    <string name="str_AlmTimingSch">Please Set the timer alarm switch time</string>
    <string name="str_AlmVoiceDet">Sound Alert</string>
    <string name="str_Auto">Auto</string>
    <string name="str_Back">Back</string>
    <string name="str_Cam">Device</string>
    <string name="str_CamExists">The Device already exists</string>
    <string name="str_CamSetupCfg">Click \"OK\" to start Wi-Fi configuration. Waiting until \"Wi-Fi Connection Success\" and \"Add New Camera\" pop up.</string>
    <string name="str_CamSetupWF2"><b>Step 2.</b> Scan the camera QR code(at the bottom of camera) to acquire the camera ID.</string>
    <string name="str_CamSetupWF2N"><b>Step 2.</b> Once Connected, come back and scan QR code(at the bottom of the camera) to acquire the camera ID.</string>
    <string name="str_CamWifiSetup1"><b>Step 1.</b> Power on the camera, then go to “Settings” on your device.Tap on Wi-Fi, then connect the network same as camera UID, as below.</string>
    <string name="str_Cam_online">Online Device</string>
    <string name="str_Cancel">Cancel</string>
    <string name="str_Change">Change</string>
    <string name="str_ChangedPwdTips">We recommend that you change your default camera access password for security!</string>
    <string name="str_ClockISRinging">The alarm clock has been ringing!</string>
    <string name="str_ClockRingInterval">Interval</string>
    <string name="str_ClockRingRepeast">Repeat</string>
    <string name="str_ClockRingTime">Ring</string>
    <string name="str_Close">Close</string>
    <string name="str_Cnnting">Connecting ...</string>
    <string name="str_CurrVer">Ver 1.1.0.3</string>
    <string name="str_DelAlarmRec">Delete alarm record</string>
    <string name="str_DelCamera">Delete Device</string>
    <string name="str_DelRec">Delete video</string>
    <string name="str_DelSnapshot">Delete snapshot</string>
    <string name="str_DevAir">Air Sensor</string>
    <string name="str_DevCamera">Camera</string>
    <string name="str_DevGas">Gas Sensor</string>
    <string name="str_DevLight">WiFi Light</string>
    <string name="str_DevPIR">PIR Sensor</string>
    <string name="str_DevSch">Rules</string>
    <string name="str_DevSchList">Timing</string>
    <string name="str_DevSwitch">WiFi Plug</string>
    <string name="str_DevTimer">Countdown</string>
    <string name="str_DevType">Device Type</string>
    <string name="str_Disabled">Disabled</string>
    <string name="str_Dowmload_CloudMnu">Download %d minutes video record</string>
    <string name="str_Dowmloading">Downloading ...</string>
    <string name="str_Download">Download</string>
    <string name="str_Downloaded">Downloaded</string>
    <string name="str_Downloading">Downloading</string>
    <string name="str_EditCamera">Modify Device</string>
    <string name="str_Enabled">Enabled</string>
    <string name="str_EndTime">EndTime</string>
    <string name="str_Exit">Exit</string>
    <string name="str_Fail">failed!</string>
    <string name="str_FailureMusicOff">Fail to stop playing the background music!</string>
    <string name="str_FastOperations">Operation too frequent, please try again later!</string>
    <string name="str_Filter">Filter</string>
    <string name="str_Flash">Flicker</string>
    <string name="str_Format">Format</string>
    <string name="str_Formating">Formating ...</string>
    <string name="str_Frq_50HZ">50HZ</string>
    <string name="str_Frq_60HZ">60HZ</string>
    <string name="str_Frq_Disabled">Disabled</string>
    <string name="str_H264DecoderUserHardware">App will use hardware decoder, please restart App.</string>
    <string name="str_H264DecoderUserSoftware">App will use software decoder, please restart App.</string>
    <string name="str_Help">Help</string>
    <string name="str_InvalidClockTimeSet">Invalid clock time input(1---200)!</string>
    <string name="str_LEDOFF">Lamp OFF</string>
    <string name="str_LEDOn">Lamp ON</string>
    <string name="str_LanIPAddr">LAN IP address</string>
    <string name="str_LightCtrl">Lamp Control</string>
    <string name="str_LiveCeilTempeLowerLimitHint">Invalid value！The lower alarm limit value shoud be above</string>
    <string name="str_LiveCeilpeAboveLimitHint">Invalid value! The upper alarm limit value should be below</string>
    <string name="str_LiveFahrTempeAboveLimitHint">Invalid value! The upper alarm limit value should be below</string>
    <string name="str_LiveFahrTempeLowerLimitHint">Invalid value! The lower alarm limit value should be above</string>
    <string name="str_LiveTempeAbove">High Temp Alarm</string>
    <string name="str_LiveTempeAboveLimitHint">The upper limit should be above</string>
    <string name="str_LiveTempeBelow">Low Temp Alarm</string>
    <string name="str_LiveTempeLowerLimitHint">The lower limit should be below</string>
    <string name="str_LiveVideo">Live video</string>
    <string name="str_Logging">Logging in ...</string>
    <string name="str_Logo">P2PCam</string>
    <string name="str_Manual">Manually</string>
    <string name="str_Minutes">minutes</string>
    <string name="str_MissingUid">Missing UID, please contact seller!</string>
    <string name="str_Name">Name</string>
    <string name="str_NewCamera">New Device</string>
    <string name="str_Next">Next</string>
    <string name="str_OK">OK</string>
    <string name="str_OLUsers">User</string>
    <string name="str_Off">Off</string>
    <string name="str_On">On</string>
    <string name="str_Online">Online</string>
    <string name="str_OpenFiles">Open file</string>
    <string name="str_OpenSnapshot">Open snapshot</string>
    <string name="str_OtherNetwork">Other Network ...</string>
    <string name="str_P2PSevStart">P2P Start</string>
    <string name="str_P2PSevStop">P2P Stop</string>
    <string name="str_PlayLoop">Loop play</string>
    <string name="str_PlayOne">Single play</string>
    <string name="str_PlayStop">Stop</string>
    <string name="str_PlugOFF">Plug OFF</string>
    <string name="str_PlugOn">Plug ON</string>
    <string name="str_Power_Frq">Power Frequency</string>
    <string name="str_Pwd">Password</string>
    <string name="str_ReCnnt">Reconnect</string>
    <string name="str_Rec">Record</string>
    <string name="str_RecFiles">Video files</string>
    <string name="str_Recipient">Recipient</string>
    <string name="str_Record_Stoped">Record has stopped</string>
    <string name="str_Recording">Recording</string>
    <string name="str_RecvAlmMsg">Receive Alarm Message</string>
    <string name="str_Refresh">Refresh</string>
    <string name="str_RelayOff">Relay off</string>
    <string name="str_RelayOn">Relay on</string>
    <string name="str_RequSev">Request service ...</string>
    <string name="str_ResetCamera">Reset Camera</string>
    <string name="str_Retry">please retry it later!</string>
    <string name="str_SDCard_status">SD card status</string>
    <string name="str_SDFree_Space">Free space</string>
    <string name="str_SDTotal_Space">SD card capacity</string>
    <string name="str_SD_not">No SD card detected</string>
    <string name="str_SSID">WiFi Name</string>
    <string name="str_SavedOK">Successfully saved！</string>
    <string name="str_ScanUID">QR Scan</string>
    <string name="str_Sch">Schedule</string>
    <string name="str_SchDay">Every Day</string>
    <string name="str_SchFriday">Fri</string>
    <string name="str_SchMonday">Mon</string>
    <string name="str_SchMonth">Month</string>
    <string name="str_SchOneTimes">Single</string>
    <string name="str_SchSaturday">Sat</string>
    <string name="str_SchSunday">Sun</string>
    <string name="str_SchThursday">Thu</string>
    <string name="str_SetupCamWIFI">Setup Device WIFI connection</string>
    <string name="str_bright">Bright</string>
    <string name="str_dark">Dark</string>
    <string name="str_es90_pir_DuskDawn">Dusk to Dawn</string>
    <string name="str_es90_pir_auto2">Auto 2</string>
    <string name="str_es90_pir_auto6">Auto 6</string>
    <string name="str_es90_pir_test">TEST MODE</string>
    <string name="str_es90_pirmode">PirMode Settings</string>
    <string name="str_fun_cloud">Cloud Service</string>
    <string name="str_fun_sev_time">Service Time</string>
    <string name="str_iropen_level">Brightness for turing on IR-LED</string>
    <string name="str_level_normal">normal</string>
    <string name="str_rec_voice">Record sound</string>
    <string name="str_use_cloud_keyinput">Input cloud service key</string>
    <string name="str_use_cloud_keys">Cloud service keys</string>
    <string name="str_use_cloud_keyscan">Scan cloud service key</string>
    <string name="str_use_cloudsev">Use cloud service</string>
    <string name="strfun_irledcfg">IR-LED Config</string>
    <string name="strfun_time_setting">Time Setting</string>
    <string name="strntp_current_time">Current Time</string>
    <string name="strntp_server">Time Server</string>
    <string name="strntp_sync_app">Sync with App Time</string>
    <string name="strntp_timemode">Time Mode</string>
    <string name="strntp_timezone">Time Zone</string>
    <string name="time_dst">Daylight Saving Time</string>
    <string name="fri">Fri</string>
    <string name="mon">Mon</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="thu">Thu</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
</resources>