<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/bg_maintitle" android:layout_width="fill_parent" android:layout_height="45.0dip">
        <TextView android:textSize="@dimen/sz_title" android:textColor="@color/clr_White" android:id="@id/lbSehCamera" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_AddNewCamSel" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TableLayout android:orientation="vertical" android:id="@id/TableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btnAddOnlineCam" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="10.0dip" android:text="@string/str_AddCamOnline" android:drawableLeft="@drawable/cam_add" />
        <Button android:id="@id/btnAddCamMnu" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/str_AddCamMnu" android:drawableLeft="@drawable/cam_add" />
        <Button android:id="@id/btnSetupCamWIFI" android:layout_width="wrap_content" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/str_SetupCamWIFI" android:drawableLeft="@drawable/wifi_setup" />
    </TableLayout>
</LinearLayout>